// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package com.android.designcompose.proto.design;

import "design/element/font.proto";
import "design/element/path.proto";
import "design/modifier/background.proto";

message TextStyle {
  modifier.Background text_color = 1;
  float font_size = 2;
  optional string font_family = 3;
  element.FontWeight font_weight = 4;
  element.FontStyle font_style = 5;
  element.FontStretch font_stretch = 6;
  float letter_spacing = 7;
  element.LineHeight line_height = 8;
  repeated element.FontFeature font_features = 9;
}

message StyledTextRun {
  string text = 1;
  TextStyle style = 2;
}

message StyledText {
  repeated StyledTextRun styled_texts = 1;
}
